fixed small css alignment issue with new deploy design

--- a/src/AsimovDeploy.NodeFront/public/css/deploy-dialog.less
+++ b/src/AsimovDeploy.NodeFront/public/css/deploy-dialog.less
@@ -1,7 +1,7 @@
 
 
 #deploy-modal .modal-body {
-    padding: 3px 3px 20px 3px;
+    padding: 3px 3px 20px 15px;
 }
 
 .deploy-info-wrapper {
@@ -14,6 +14,7 @@
         display: inline-block;
         color: @blue;
         font-weight: bold;
+        padding-left: 0;
         text-align: left;
         background-color: transparent;
         border: none;
